--- a/travel/index.html
+++ b/travel/index.html
@@ -242,7 +242,7 @@
         <ul>
           <li data-activity="nature" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/zilker-cropped.jpeg" alt="" />
               <figcaption><h3>Zilker Park</h3></figcaption>
             </figure>
             <article class=hidden>
@@ -271,7 +271,7 @@
           </li>
           <li data-activity="food" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/torchys-cropped.jpeg" alt="" />
               <figcaption><h3>Torchy's Tacos</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -297,7 +297,7 @@
           </li>
           <li data-activity="food-bars" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/pbs-cropped.jpeg" alt="" />
               <figcaption><h3>Punch Bowl Social</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -332,7 +332,7 @@
           </li>
           <li data-activity="food-bars-music" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/shenans-cropped.jpeg" alt="" />
               <figcaption><h3>Shenanigans</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -357,7 +357,7 @@
           </li>
           <li data-activity="bars-music" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/container-bar-cropped.jpeg" alt="" />
               <figcaption><h3>Container Bar</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -382,7 +382,7 @@
           </li>
           <li data-activity="food" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/medici-cropped.jpeg" alt="" />
               <figcaption><h3>Medici</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -407,7 +407,7 @@
           </li>
           <li data-activity="food" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/ss-cropped.jpeg" alt="" />
               <figcaption><h3>Shake Shack</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -432,7 +432,7 @@
           </li>
           <li data-activity="nature" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/zilker-cropped.jpeg" alt="" />
               <figcaption><h3>Zilker Park</h3></figcaption>
             </figure>
             <article class=hidden>
@@ -461,7 +461,7 @@
           </li>
           <li data-activity="food" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/torchys-cropped.jpeg" alt="" />
               <figcaption><h3>Torchy's Tacos</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -487,7 +487,7 @@
           </li>
           <li data-activity="food-bars" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/pbs-cropped.jpeg" alt="" />
               <figcaption><h3>Punch Bowl Social</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -522,7 +522,7 @@
           </li>
           <li data-activity="food-bars-music" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/shenans-cropped.jpeg" alt="" />
               <figcaption><h3>Shenanigans</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -547,7 +547,7 @@
           </li>
           <li data-activity="bars-music" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/container-bar-cropped.jpeg" alt="" />
               <figcaption><h3>Container Bar</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -572,7 +572,7 @@
           </li>
           <li data-activity="food" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/medici-cropped.jpeg" alt="" />
               <figcaption><h3>Medici</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -597,7 +597,7 @@
           </li>
           <li data-activity="food" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/ss-cropped.jpeg" alt="" />
               <figcaption><h3>Shake Shack</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -622,7 +622,7 @@
           </li>
           <li data-activity="nature" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/zilker-cropped.jpeg" alt="" />
               <figcaption><h3>Zilker Park</h3></figcaption>
             </figure>
             <article class=hidden>
@@ -651,7 +651,7 @@
           </li>
           <li data-activity="food" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/torchys-cropped.jpeg" alt="" />
               <figcaption><h3>Torchy's Tacos</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -677,7 +677,7 @@
           </li>
           <li data-activity="food-bars" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/pbs-cropped.jpeg" alt="" />
               <figcaption><h3>Punch Bowl Social</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -712,7 +712,7 @@
           </li>
           <li data-activity="food-bars-music" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/shenans-cropped.jpeg" alt="" />
               <figcaption><h3>Shenanigans</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -737,7 +737,7 @@
           </li>
           <li data-activity="bars-music" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/container-bar-cropped.jpeg" alt="" />
               <figcaption><h3>Container Bar</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -762,7 +762,7 @@
           </li>
           <li data-activity="food" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/medici-cropped.jpeg" alt="" />
               <figcaption><h3>Medici</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -787,7 +787,7 @@
           </li>
           <li data-activity="food" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/ss-cropped.jpeg" alt="" />
               <figcaption><h3>Shake Shack</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -812,7 +812,7 @@
           </li>
           <li data-activity="nature" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/zilker-cropped.jpeg" alt="" />
               <figcaption><h3>Zilker Park</h3></figcaption>
             </figure>
             <article class=hidden>
@@ -841,7 +841,7 @@
           </li>
           <li data-activity="food" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/torchys-cropped.jpeg" alt="" />
               <figcaption><h3>Torchy's Tacos</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -867,7 +867,7 @@
           </li>
           <li data-activity="food-bars" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/pbs-cropped.jpeg" alt="" />
               <figcaption><h3>Punch Bowl Social</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -902,7 +902,7 @@
           </li>
           <li data-activity="food-bars-music" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/shenans-cropped.jpeg" alt="" />
               <figcaption><h3>Shenanigans</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -927,7 +927,7 @@
           </li>
           <li data-activity="bars-music" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/container-bar-cropped.jpeg" alt="" />
               <figcaption><h3>Container Bar</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -952,7 +952,7 @@
           </li>
           <li data-activity="food" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/medici-cropped.jpeg" alt="" />
               <figcaption><h3>Medici</h3></figcaption>
             </figure>
             <article class="hidden">
@@ -977,7 +977,7 @@
           </li>
           <li data-activity="food" class="thing">
             <figure>
-              <img src="https://placeimg.com/1000/200/nature" alt="" />
+              <img src="dist/images/things/ss-cropped.jpeg" alt="" />
               <figcaption><h3>Shake Shack</h3></figcaption>
             </figure>
             <article class="hidden">
