adding waypoints works

--- a/travel/index.html
+++ b/travel/index.html
@@ -216,17 +216,17 @@
         <div class="waypoints-wrapper">
           <div class="waypoints hidden">
             <h4>Your Waypoints</h4>
-            <ul>
+            <ul class="added">
               <li>Alamo Drafthouse</li>
-              <li>Torchys Tacos</li>
-              <li>Uncommon Objects</li>
-              <li>Mount Bonnell</li>
+              <!-- <li>Torchys Tacos</li> -->
+              <!-- <li>Uncommon Objects</li> -->
+              <!-- <li>Mount Bonnell</li> -->
             </ul>
 
             <hr />
 
             <h5>Recommended</h5>
-            <ul>
+            <ul class="recommended">
               <li>Alamo Drafthouse</li>
               <li>Torchys Tacos</li>
               <li>Uncommon Objects</li>
@@ -243,7 +243,9 @@
           <li data-activity="nature" class="thing">
             <figure>
               <img src="dist/images/things/zilker-cropped.jpeg" alt="" />
-              <figcaption><h3>Zilker Park</h3></figcaption>
+              <figcaption><h3>Zilker Park</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class=hidden>
               <div class="name">
@@ -272,7 +274,9 @@
           <li data-activity="food" class="thing">
             <figure>
               <img src="dist/images/things/torchys-cropped.jpeg" alt="" />
-              <figcaption><h3>Torchy's Tacos</h3></figcaption>
+              <figcaption><h3>Torchy's Tacos</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -298,7 +302,9 @@
           <li data-activity="food-bars" class="thing">
             <figure>
               <img src="dist/images/things/pbs-cropped.jpeg" alt="" />
-              <figcaption><h3>Punch Bowl Social</h3></figcaption>
+              <figcaption><h3>Punch Bowl Social</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -333,7 +339,9 @@
           <li data-activity="food-bars-music" class="thing">
             <figure>
               <img src="dist/images/things/shenans-cropped.jpeg" alt="" />
-              <figcaption><h3>Shenanigans</h3></figcaption>
+              <figcaption><h3>Shenanigans</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -358,7 +366,9 @@
           <li data-activity="bars-music" class="thing">
             <figure>
               <img src="dist/images/things/container-bar-cropped.jpeg" alt="" />
-              <figcaption><h3>Container Bar</h3></figcaption>
+              <figcaption><h3>Container Bar</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -383,7 +393,9 @@
           <li data-activity="food" class="thing">
             <figure>
               <img src="dist/images/things/medici-cropped.jpeg" alt="" />
-              <figcaption><h3>Medici</h3></figcaption>
+              <figcaption><h3>Medici</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -408,7 +420,9 @@
           <li data-activity="food" class="thing">
             <figure>
               <img src="dist/images/things/ss-cropped.jpeg" alt="" />
-              <figcaption><h3>Shake Shack</h3></figcaption>
+              <figcaption><h3>Shake Shack</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -433,7 +447,9 @@
           <li data-activity="nature" class="thing">
             <figure>
               <img src="dist/images/things/zilker-cropped.jpeg" alt="" />
-              <figcaption><h3>Zilker Park</h3></figcaption>
+              <figcaption><h3>Zilker Park</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class=hidden>
               <div class="name">
@@ -462,7 +478,9 @@
           <li data-activity="food" class="thing">
             <figure>
               <img src="dist/images/things/torchys-cropped.jpeg" alt="" />
-              <figcaption><h3>Torchy's Tacos</h3></figcaption>
+              <figcaption><h3>Torchy's Tacos</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -488,7 +506,9 @@
           <li data-activity="food-bars" class="thing">
             <figure>
               <img src="dist/images/things/pbs-cropped.jpeg" alt="" />
-              <figcaption><h3>Punch Bowl Social</h3></figcaption>
+              <figcaption><h3>Punch Bowl Social</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -523,7 +543,9 @@
           <li data-activity="food-bars-music" class="thing">
             <figure>
               <img src="dist/images/things/shenans-cropped.jpeg" alt="" />
-              <figcaption><h3>Shenanigans</h3></figcaption>
+              <figcaption><h3>Shenanigans</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -548,7 +570,9 @@
           <li data-activity="bars-music" class="thing">
             <figure>
               <img src="dist/images/things/container-bar-cropped.jpeg" alt="" />
-              <figcaption><h3>Container Bar</h3></figcaption>
+              <figcaption><h3>Container Bar</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -573,7 +597,9 @@
           <li data-activity="food" class="thing">
             <figure>
               <img src="dist/images/things/medici-cropped.jpeg" alt="" />
-              <figcaption><h3>Medici</h3></figcaption>
+              <figcaption><h3>Medici</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -598,7 +624,9 @@
           <li data-activity="food" class="thing">
             <figure>
               <img src="dist/images/things/ss-cropped.jpeg" alt="" />
-              <figcaption><h3>Shake Shack</h3></figcaption>
+              <figcaption><h3>Shake Shack</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -623,7 +651,9 @@
           <li data-activity="nature" class="thing">
             <figure>
               <img src="dist/images/things/zilker-cropped.jpeg" alt="" />
-              <figcaption><h3>Zilker Park</h3></figcaption>
+              <figcaption><h3>Zilker Park</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class=hidden>
               <div class="name">
@@ -652,7 +682,9 @@
           <li data-activity="food" class="thing">
             <figure>
               <img src="dist/images/things/torchys-cropped.jpeg" alt="" />
-              <figcaption><h3>Torchy's Tacos</h3></figcaption>
+              <figcaption><h3>Torchy's Tacos</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -678,7 +710,9 @@
           <li data-activity="food-bars" class="thing">
             <figure>
               <img src="dist/images/things/pbs-cropped.jpeg" alt="" />
-              <figcaption><h3>Punch Bowl Social</h3></figcaption>
+              <figcaption><h3>Punch Bowl Social</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -713,7 +747,9 @@
           <li data-activity="food-bars-music" class="thing">
             <figure>
               <img src="dist/images/things/shenans-cropped.jpeg" alt="" />
-              <figcaption><h3>Shenanigans</h3></figcaption>
+              <figcaption><h3>Shenanigans</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -738,7 +774,9 @@
           <li data-activity="bars-music" class="thing">
             <figure>
               <img src="dist/images/things/container-bar-cropped.jpeg" alt="" />
-              <figcaption><h3>Container Bar</h3></figcaption>
+              <figcaption><h3>Container Bar</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -763,7 +801,9 @@
           <li data-activity="food" class="thing">
             <figure>
               <img src="dist/images/things/medici-cropped.jpeg" alt="" />
-              <figcaption><h3>Medici</h3></figcaption>
+              <figcaption><h3>Medici</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -788,7 +828,9 @@
           <li data-activity="food" class="thing">
             <figure>
               <img src="dist/images/things/ss-cropped.jpeg" alt="" />
-              <figcaption><h3>Shake Shack</h3></figcaption>
+              <figcaption><h3>Shake Shack</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -813,7 +855,9 @@
           <li data-activity="nature" class="thing">
             <figure>
               <img src="dist/images/things/zilker-cropped.jpeg" alt="" />
-              <figcaption><h3>Zilker Park</h3></figcaption>
+              <figcaption><h3>Zilker Park</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class=hidden>
               <div class="name">
@@ -842,7 +886,9 @@
           <li data-activity="food" class="thing">
             <figure>
               <img src="dist/images/things/torchys-cropped.jpeg" alt="" />
-              <figcaption><h3>Torchy's Tacos</h3></figcaption>
+              <figcaption><h3>Torchy's Tacos</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -868,7 +914,9 @@
           <li data-activity="food-bars" class="thing">
             <figure>
               <img src="dist/images/things/pbs-cropped.jpeg" alt="" />
-              <figcaption><h3>Punch Bowl Social</h3></figcaption>
+              <figcaption><h3>Punch Bowl Social</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -903,7 +951,9 @@
           <li data-activity="food-bars-music" class="thing">
             <figure>
               <img src="dist/images/things/shenans-cropped.jpeg" alt="" />
-              <figcaption><h3>Shenanigans</h3></figcaption>
+              <figcaption><h3>Shenanigans</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -928,7 +978,9 @@
           <li data-activity="bars-music" class="thing">
             <figure>
               <img src="dist/images/things/container-bar-cropped.jpeg" alt="" />
-              <figcaption><h3>Container Bar</h3></figcaption>
+              <figcaption><h3>Container Bar</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -953,7 +1005,9 @@
           <li data-activity="food" class="thing">
             <figure>
               <img src="dist/images/things/medici-cropped.jpeg" alt="" />
-              <figcaption><h3>Medici</h3></figcaption>
+              <figcaption><h3>Medici</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
@@ -978,7 +1032,9 @@
           <li data-activity="food" class="thing">
             <figure>
               <img src="dist/images/things/ss-cropped.jpeg" alt="" />
-              <figcaption><h3>Shake Shack</h3></figcaption>
+              <figcaption><h3>Shake Shack</h3>
+                <!-- <img class="add" src="app/images/icons/add.png"> -->
+              </figcaption>
             </figure>
             <article class="hidden">
               <div class="name">
