can't add duplicates and styling

--- a/travel/index.html
+++ b/travel/index.html
@@ -217,20 +217,16 @@
           <div class="waypoints hidden">
             <h4>Your Waypoints</h4>
             <ul class="added">
-              <li>Alamo Drafthouse</li>
+              <li>Alamo Drafthouse <span><img src="dist/images/icons/remove-dark.png" alt=""></span></li>
               <!-- <li>Torchys Tacos</li> -->
               <!-- <li>Uncommon Objects</li> -->
               <!-- <li>Mount Bonnell</li> -->
             </ul>
 
-            <hr />
-
             <h5>Recommended</h5>
             <ul class="recommended">
-              <li>Alamo Drafthouse</li>
-              <li>Torchys Tacos</li>
-              <li>Uncommon Objects</li>
-              <li>Mount Bonnell</li>
+              <li>Uncommon Objects <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
+              <li>Mount Bonnell <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
             </ul>
           </div>
         </div>
