--- a/travel/index.html
+++ b/travel/index.html
@@ -48,13 +48,13 @@
       </div>
     </div>
 
-    <main class="wrapper stay">
-      <nav>
+    <nav>
+      <div class="wrapper">
         <div>
           <h6>Filter by</h6>
           <h6 class="dropdown activities">Type of Activity</h6>
           <h6 class="dropdown districts">District</h6>
-          <h6 class="radio-input">Austin Exclusives</h6>
+          <!-- <h6 class="radio-input">Austin Exclusives</h6> -->
           <h6 class="radio-input">Time Sensitive</h6>
         </div>
 
@@ -212,8 +212,9 @@
             </li>
           </ul>
         </div>
-
+        
         <div class="waypoints-wrapper">
+          <img class="icon" src="dist/images/icons/itinerary-white.png" alt="">
           <div class="waypoints hidden">
             <h4>Your Waypoints</h4>
             <ul class="added">
@@ -230,7 +231,10 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
+
+    <main class="wrapper stay">
 
       <section class="filtered-things">
         <!-- Subject to change -->
