--- a/travel/index.html
+++ b/travel/index.html
@@ -58,22 +58,7 @@
           <h6 class="radio-input">Time Sensitive</h6>
 
           <div class="waypoints-wrapper">
-            <img class="icon" src="dist/images/icons/itinerary-white.png" alt="">
-            <div class="waypoints hidden">
-              <h4>Your Waypoints</h4>
-              <ul class="added">
-                <li>Alamo Drafthouse <span><img src="dist/images/icons/remove-dark.png" alt=""></span></li>
-                <!-- <li>Torchys Tacos</li> -->
-                <!-- <li>Uncommon Objects</li> -->
-                <!-- <li>Mount Bonnell</li> -->
-              </ul>
-
-              <h5>Recommended</h5>
-              <ul class="recommended">
-                <li>Uncommon Objects <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
-                <li>Mount Bonnell <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
-              </ul>
-            </div>
+            <span><h6>Your Waypoints</h6><img class="icon" src="dist/images/icons/itinerary-white.png" alt=""></span>
           </div>
         </div>
       </div>
@@ -230,6 +215,22 @@
               </figcaption>
             </figure>
           </li>
+        </ul>
+      </div>
+
+      <div class="waypoints hidden">
+        <h4>Your Waypoints</h4>
+        <ul class="added">
+          <li>Alamo Drafthouse <span><img src="dist/images/icons/remove-dark.png" alt=""></span></li>
+          <!-- <li>Torchys Tacos</li> -->
+          <!-- <li>Uncommon Objects</li> -->
+          <!-- <li>Mount Bonnell</li> -->
+        </ul>
+
+        <h5>Recommended</h5>
+        <ul class="recommended">
+          <li>Uncommon Objects <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
+          <li>Mount Bonnell <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
         </ul>
       </div>
     </nav>
