--- a/travel/index.html
+++ b/travel/index.html
@@ -219,19 +219,34 @@
       </div>
 
       <div class="waypoints hidden">
-        <h4>Your Waypoints</h4>
-        <ul class="added">
-          <li>Alamo Drafthouse <span><img src="dist/images/icons/remove-dark.png" alt=""></span></li>
-          <!-- <li>Torchys Tacos</li> -->
-          <!-- <li>Uncommon Objects</li> -->
-          <!-- <li>Mount Bonnell</li> -->
-        </ul>
+        <div class="wrapper">
+          <h4>Your Waypoints</h4>
+          <div>
+            <h5>Unexplored</h5>
+            <ul class="added">
+              <li>Alamo Drafthouse <span><img src="dist/images/icons/remove-dark.png" alt=""></span></li>
+              <!-- <li>Torchys Tacos</li> -->
+              <!-- <li>Uncommon Objects</li> -->
+              <!-- <li>Mount Bonnell</li> -->
+            </ul>
+          </div>
 
-        <h5>Recommended</h5>
-        <ul class="recommended">
-          <li>Uncommon Objects <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
-          <li>Mount Bonnell <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
-        </ul>
+          <div>
+            <h5>Recommended</h5>
+            <ul class="recommended">
+              <li>Uncommon Objects <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
+              <li>Mount Bonnell <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
+            </ul>
+          </div>
+
+          <div>
+            <h5>Visited</h5>
+            <ul class="visited">
+              <li>Uncommon Objects <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
+              <li>Mount Bonnell <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </nav>
 
