real activity images

--- a/travel/index.html
+++ b/travel/index.html
@@ -67,7 +67,7 @@
         <ul>
           <li>
             <figure>
-              <img data-activity="food" src="https://placeimg.com/520/170/arch" alt="">
+              <img data-activity="food" src="dist/images/activities/food1.jpg" alt="">
               <figcaption>
                 <h3>Food</h3>
               </figcaption>
@@ -75,7 +75,7 @@
           </li>
           <li>
             <figure>
-              <img data-activity="music" src="https://placeimg.com/520/170/arch" alt="">
+              <img data-activity="music" src="dist/images/activities/music.jpg" alt="">
               <figcaption>
                 <h3>Music</h3>
               </figcaption>
@@ -83,7 +83,7 @@
           </li>
           <li>
             <figure>
-              <img data-activity="sports" src="https://placeimg.com/520/170/arch" alt="">
+              <img data-activity="sports" src="dist/images/activities/sports.jpg" alt="">
               <figcaption>
                 <h3>Sports</h3>
               </figcaption>
@@ -91,7 +91,7 @@
           </li>
           <li>
             <figure>
-              <img data-activity="arts" src="https://placeimg.com/520/170/arch" alt="">
+              <img data-activity="arts" src="dist/images/activities/art.jpg" alt="">
               <figcaption>
                 <h3>Arts</h3>
               </figcaption>
@@ -99,7 +99,7 @@
           </li>
           <li>
             <figure>
-              <img data-activity="bars" src="https://placeimg.com/520/170/arch" alt="">
+              <img data-activity="bars" src="dist/images/activities/bars1.jpg" alt="">
               <figcaption>
                 <h3>Bars</h3>
               </figcaption>
@@ -107,7 +107,7 @@
           </li>
           <li>
             <figure>
-              <img data-activity="nature" src="https://placeimg.com/520/170/arch" alt="">
+              <img data-activity="nature" src="dist/images/activities/nature.jpg" alt="">
               <figcaption>
                 <h3>Nature</h3>
               </figcaption>
@@ -115,7 +115,7 @@
           </li>
           <li>
             <figure>
-              <img data-activity="historic landmarks" src="https://placeimg.com/520/170/arch" alt="">
+              <img data-activity="historic landmarks" src="dist/images/activities/landmarks.jpg" alt="">
               <figcaption>
                 <h3>Hisoric Landmarks</h3>
               </figcaption>
@@ -123,7 +123,7 @@
           </li>
           <li>
             <figure>
-              <img data-activity="shopping" src="https://placeimg.com/520/170/arch" alt="">
+              <img data-activity="shopping" src="dist/images/activities/shopping.png" alt="">
               <figcaption>
                 <h3>Shopping</h3>
               </figcaption>
@@ -133,7 +133,6 @@
       </div>
 
       <div class="districts hidden">
-        <!-- <input type="search"> -->
         <ul>
           <li>
             <figure>
@@ -224,7 +223,7 @@
           <div>
             <h5>Unexplored</h5>
             <ul class="added">
-              <li>Alamo Drafthouse <span><img src="dist/images/icons/remove-dark.png" alt=""></span></li>
+              <li>Alamo Drafthouse <span><img src="dist/images/icons/check.png" alt=""></span></li>
               <!-- <li>Torchys Tacos</li> -->
               <!-- <li>Uncommon Objects</li> -->
               <!-- <li>Mount Bonnell</li> -->
@@ -242,8 +241,8 @@
           <div>
             <h5>Visited</h5>
             <ul class="visited">
-              <li>Uncommon Objects <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
-              <li>Mount Bonnell <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
+              <li>Uncommon Objects <span><img src="dist/images/icons/undo.png" alt=""></span></li>
+              <li>Mount Bonnell <span><img src="dist/images/icons/undo.png" alt=""></span></li>
             </ul>
           </div>
         </div>
