starting work on time sensitive events

--- a/travel/index.html
+++ b/travel/index.html
@@ -55,7 +55,7 @@
           <h6 class="dropdown activities">Type of Activity</h6>
           <h6 class="dropdown districts">District</h6>
           <!-- <h6 class="radio-input">Austin Exclusives</h6> -->
-          <h6 class="radio-input">Time Sensitive</h6>
+          <h6 class="radio-input"><span></span>Time Sensitive</h6>
 
           <div class="waypoints-wrapper">
             <span><h6>Your Waypoints</h6><img class="icon" src="dist/images/icons/itinerary-white.png" alt=""></span>
