--- a/travel/index.html
+++ b/travel/index.html
@@ -223,23 +223,23 @@
           <div>
             <h5>Unexplored</h5>
             <ul class="added">
-              <li>Alamo Drafthouse <span><img src="dist/images/icons/check.png" alt=""></span></li>
             </ul>
           </div>
 
           <div>
             <h5>Recommended</h5>
             <ul class="recommended">
-              <li>Uncommon Objects <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
-              <li>Mount Bonnell <span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
+              <li>Uncommon Objects<span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
+              <li>Mount Bonnell<span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
+              <li>Hey!... You Gonna Eat or What?<span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
+              <li>Container Bar<span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
+              <li>Shenanigans<span><img src="dist/images/icons/add-dark.png" alt=""></span></li>
             </ul>
           </div>
 
           <div>
             <h5>Visited</h5>
             <ul class="visited">
-              <li>Uncommon Objects <span><img src="dist/images/icons/undo.png" alt=""></span></li>
-              <li>Mount Bonnell <span><img src="dist/images/icons/undo.png" alt=""></span></li>
             </ul>
           </div>
         </div>
